--- a/front-end/src/css/main.css
+++ b/front-end/src/css/main.css
@@ -6,7 +6,7 @@ html {
   color: #2c3e50;
 }
 
-body {
+.body {
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -71,7 +71,7 @@ body {
 }
 
 .hero {
-  background-image: url("../img/bank-tree.jpeg");
+  background-image: url('../img/bank-tree.jpeg');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -290,3 +290,10 @@ body {
   }
 }
 
+
+.sign-in {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
